[gd_scene load_steps=4 format=3 uid="uid://b6byrorw3t8gb"]

[ext_resource type="Script" uid="uid://d0dtra0qhkhab" path="res://src/hud.gd" id="1_cxk63"]
[ext_resource type="FontFile" uid="uid://dugp0e00stu5u" path="res://assets/fonts/Starjedi.ttf" id="2_46fd5"]

[sub_resource type="LabelSettings" id="LabelSettings_d3u4l"]
font = ExtResource("2_46fd5")
font_size = 25

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxk63")

[node name="AreasLeftLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 87.0
offset_bottom = 63.0
text = "0/12"
label_settings = SubResource("LabelSettings_d3u4l")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_bottom = 131.0
grow_horizontal = 0

[node name="DirectionLabelTopDown" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Top"
label_settings = SubResource("LabelSettings_d3u4l")

[node name="DirectionLabelForwardBackward" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Forward"
label_settings = SubResource("LabelSettings_d3u4l")

[node name="DirectionLabelLeftRight" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "left"
label_settings = SubResource("LabelSettings_d3u4l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = -64.5
offset_right = 207.5
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="AreasLeftLabel2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You have won
Congratulations!"
label_settings = SubResource("LabelSettings_d3u4l")
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
